--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
     "@types/node": "^16.18.60",
     "@types/react": "^18.2.34",
     "@types/react-dom": "^18.2.14",
+    "@uidotdev/usehooks": "^2.4.1",
+    "framer-motion": "^10.16.12",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
+    "react-notifications": "^1.7.4",
     "react-router-dom": "^6.18.0",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.3",
+    "react-use": "^17.4.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
